k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-backend
  namespace: chess
spec:
  replicas: 4
  selector:
    matchLabels:
      app: chess-backend
  template:
    metadata:
      labels:
        app: chess-backend
    spec:
      containers:
      - name: chess-backend
        image: dubeyanand/chess:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
