k8s/kafka.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: chess
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka
        ports:
        - containerPort: 9092
          name: kafka
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        - name: chess-pvc
          mountPath: /var/lib/kafka
      volumes:
      - name: chess-pvc
        persistentVolumeClaim:
          claimName: chess-pvc
