k8s/mongo.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: chess
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo
  replicas: 2
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:latest 
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: mongo
          mountPath: /data/db
      volumes:
      - name: mongo
        persistentVolumeClaim:
          claimName: chess-pvc
