k8s/mongoseexpress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  namespace: chess
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express-deployment
  template:
    metadata:
      labels:
        app: mongo-express-deployment
    spec:
      containers:
      - name: mongo-express-deployment
        image: mongo-express
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
