k8s/redis.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: chess
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis
  replicas: 2
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis
          mountPath: /data
      volumes:
      - name: redis
        persistentVolumeClaim:
          claimName: chess-pvc
