k8s/zookeeper.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper-deployment
  namespace: chess
spec:
  selector:
    matchLabels:
      app: zookeeper-deployment
  serviceName: zookeeper
  replicas: 1
  template:
    metadata:
      labels:
        app: zookeeper-deployment
    spec:
      containers:
      - name: zookeeper-deployment
        image: confluentinc/cp-zookeeper
        ports:
        - containerPort: 2181
          name: client
        volumeMounts:
        - name: zookeeper
          mountPath: /var/lib/zookeeper
      volumes:
      - name: zookeeper
        persistentVolumeClaim:
          claimName: chess-pvc
