k8s/backened-service.yml
apiVersion: v1
kind: Service
metadata:
  name: chess-backend_service
  namespace: chess
spec:
  selector:
    app: chess-backend
  ports:
  - port: 3000
    targetPort: 3000
