k8s/kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka_service
  namespace: chess
spec:
  selector:
    app: kafka
  ports:
  - port: 9092
    targetPort: 9092
