k8s/mongose-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: chess
spec:
  selector:
    app: mongo-express
  ports:
  - port: 8081
    targetPort: 8081
