k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis_service
  namespace: chess
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
