k8s/zookeeper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper_service
  namespace: chess
spec:
  selector:
    app: zookeeper
  ports:
  - port: 2181
    targetPort: 2181
