k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chess-ingress
  namespace: chess
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: chess-backend
            port:
              number: 3000
      - pathType: Prefix
        path: "/mongo"
        backend:
          service:
            name: mongo-express
            port:
              number: 8081
